---------------------------------------------------------------------------------------------------
Version: 17.0.18
Date: 2019-12-13
  Features:
  Changes:
  Bugfixes:
    - Make mod safe to be removed from save and then re-added later, or atleast not error on load...
    - Shared Damage - Tweak player kills other player shared damage message so it reads properly
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.17
Date: 2019-12-10
  Features:
  Changes:
    - Biter Hunt Groups will no longer be treated like vanilla biters. So not despawned or told to join a biter base.
  Bugfixes:
    - Once biters are targeting spawn they will stop being re-directed in all cases. Should stop some back and forth behaviour.
    - Shared Damage map distance populated for existing saves
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.16
Date: 2019-12-08
  Features:
  Changes:
  Bugfixes:
    - Fix the biters targeting message to handle spawn as target
    - Fix the december_2019_fix_scheduled_events command and event scheduling library in MP with 2+ players
    - Biter hunt groups will chase players in vehicles and handle them getting in/out
    - When a biter hunt group kills the targeted player it will attack towards spawn.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.15
Date: 2019-12-08
  Features:
    - Shared damage is proportional to the distance between the injured player and the other player vs the generated map size. So on big maps you need to be further away from them to recive half damage than a small map.
    - Biter hunting group message includes clickable GPS location of targeted player's position.
    - Biter Hunt Groups has command to write out results as JSON: biters_write_out_hunt_group_results